$NetBSD: CHANGES-2007,v 1.867 2007/04/19 02:30:12 xtraeme Exp $

Changes to the packages collection and infrastructure in 2007:

	mk/bsd.pkg.mk: freeze ended for pkgsrc-2006Q4 branch [agc 2007-01-02]
	Updated devel/monotone to 0.32 [jmmv 2007-01-02]
	Updated devel/monotone-server to 0.32 [jmmv 2007-01-02]
	Updated editors/texmaker to 1.4 [ghen 2007-01-02]
	Updated databases/openldap-client to 2.3.31 [ghen 2007-01-02]
	Updated databases/openldap-doc to 2.3.31 [ghen 2007-01-02]
	Updated databases/openldap-server to 2.3.31 [ghen 2007-01-02]
	Updated databases/openldap to 2.3.31 [ghen 2007-01-02]
	Updated www/ja-trac to 0.10.3.1 [obache 2007-01-02]
	Updated converters/skf to 1.94.5 [obache 2007-01-02]
	Updated mail/cue to 20061225 [obache 2007-01-02]
	Updated lang/chicken to 2.50 [obache 2007-01-02]
	Added inputmethod/kasumi version 1.0.1 [obache 2007-01-02]
	Updated emulators/wine to 0.9.28 [adam 2007-01-02]
	Updated devel/libextractor to 0.5.17 [adam 2007-01-02]
	Updated devel/mercurial to 0.9.3 [minskim 2007-01-02]
	Updated math/mathomatic to 12.6.8 [minskim 2007-01-02]
	Updated converters/skf to 1.94.6 [obache 2007-01-02]
	Updated www/visitors to 0.7 [obache 2007-01-02]
	Added time/p5-Time-Duration version 1.37 [reed 2007-01-02]
	Updated devel/libgphoto2 to 2.3.1 [adam 2007-01-02]
	Updated graphics/gphoto2 to 2.3.1 [adam 2007-01-02]
	Updated graphics/libkexif to 0.2.5 [xtraeme 2007-01-02]
	Updated graphics/libkipi to 0.1.5 [xtraeme 2007-01-02]
	Updated graphics/kipi-plugins to 0.1.3rc1 [xtraeme 2007-01-02]
	Updated graphics/digikam to 0.9.0 [xtraeme 2007-01-02]
	Updated graphics/digikamimageplugins to 0.9.0 [xtraeme 2007-01-02]
	Updated audio/openal to 0.0.8 [wiz 2007-01-03]
	Added math/fgmp version 1.0b5 [agc 2007-01-03]
	Updated wm/wmctrl to 1.07 [obache 2007-01-03]
	Updated sysutils/ipa to 2.0.2 [obache 2007-01-03]
	Added databases/ipa_sdb version 1.0.1 [obache 2007-01-03]
	Updated net/libcares to 1.3.2 [adrianp 2007-01-03]